objects/ALTF__Account_Plan_Test_And_Improve__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Plan__c</fullName>
        <label>Account Manager Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipLabel>Altify Account Manager Plan Test And Improves</relationshipLabel>
        <relationshipName>Plan_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Action_Count__c</fullName>
        <label>Action Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Attendee10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plan_Reviews9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Attendee11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plan_ReviewsYhdo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Attendee12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plan_ReviewsYhdy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Details__c</fullName>
        <label>Details</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Effective_Date__c</fullName>
        <formula>IF( ISNULL( ALTF__Scheduled_Start_Time__c ), 
  ALTF__Original_Schedule_Date__c,
DATEVALUE(ALTF__Scheduled_Start_Time__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Invite_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invite Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Location__c</fullName>
        <description>Location where Plan Review will be held</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Notes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Notes</inlineHelpText>
        <label>Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Original_Schedule_Date__c</fullName>
        <label>Original Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Owner_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plan_Reviews_Owned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Question_Count__c</fullName>
        <label>Question Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Scheduled_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scheduled Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Scheduled_Start_Time__c</fullName>
        <label>Scheduled Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__StatusSortValue__c</fullName>
        <formula>IF(ALTF__Status__c == &apos;Started&apos;, 
   1, 
   IF(ALTF__Status__c == &apos;Overdue&apos;, 
      2, 
      IF(ALTF__Status__c == &apos;Scheduled&apos;, 
         3, 
         4
      ) 
   ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusSortValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Status_Label__c</fullName>
        <formula>IF( 
	ALTF__Is_Complete__c , 
	$Label.ALTF__TANDI_COMPLETED, 
	IF( !ISBLANK(ALTF__Start_Time__c) &amp;&amp; ISBLANK(ALTF__End_Time__c) ,
		$Label.ALTF__TANDI_STARTED,
		IF( 
			ALTF__Effective_Date__c &lt; BLANKVALUE($Setup.ALTF__Core_Settings__c.ALTF__Mock_Today__c, TODAY()),
			$Label.ALTF__TANDI_OVERDUE,			
			
			$Label.ALTF__TANDI_SCHEDULED
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Status__c</fullName>
        <formula>IF( 
	ALTF__Is_Complete__c , 
	&apos;Completed&apos;, 
	IF( !ISBLANK(ALTF__Start_Time__c) &amp;&amp; ISBLANK(ALTF__End_Time__c) ,
		&apos;Started&apos;,
		IF( 
			ALTF__Effective_Date__c &lt; BLANKVALUE($Setup.ALTF__Core_Settings__c.ALTF__Mock_Today__c, TODAY()),
			&apos;Overdue&apos;,			
			&apos;Scheduled&apos;
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Subject__c</fullName>
        <label>Subject</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Test_And_Improve_Duration__c</fullName>
        <description>Set duration field based on Status and difference between start and end times. Return the total number of minutes</description>
        <formula>IF ( 
    ALTF__Status__c == &apos;Completed&apos;, 
    IF (
        ALTF__End_Time__c - ALTF__Start_Time__c &gt; 0, 
        ROUND( (ALTF__End_Time__c - ALTF__Start_Time__c ) * 24 * 60, 0),
        0
    ), 
    ALTF__Scheduled_Duration__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review_Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Vulnerability_Count__c</fullName>
        <label>Vulnerability Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Altify AM Plan Test And Improve</label>
    <nameField>
        <label>Plan Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Manager Plan Test And Imp</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>